--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "DevSocialHub",
+  "name": "devconnector",
   "version": "1.0.0",
   "description": "Social network for developers",
   "main": "server.js",
@@ -8,9 +8,11 @@
     "start": "node server.js",
     "server": "nodemon server.js",
     "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "heroku-postbuild":
+      "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
-  "author": "Luis Suarez",
+  "author": "Brad Traversy",
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
